examples/core/errors/01_double_arrow.core.tao
// Parse Error: Multiple consecutive arrows
// This should fail because the grammar doesn't allow multiple arrows in a row
-> -> x
